2008-04-02	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	drag and drop support for classroom manager (closes #1886602)

	* ica/resources/fi.ts:
	* lib/resources/fi.ts:
	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	updated Finnish localization-files

2008-03-31	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	fixed wrong mapping to framebuffer-coordinates

	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	* ima/src/main_window.cpp:
	always try to run demo-server on default-port 5858 - allows better
	firewall-configuration in many places

2008-03-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* italc.spec.in:
	applied patch to build properly/better on recent openSUSE releases by  
	Lars Vogdt <lars/at/linux-schulserve/dot/.de>

2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/pt_br.qm:
	* ica/resources/pt_br.ts:
	* setup/setup.qrc:
	* setup/resources/pt_br.ts:
	* setup/resources/pt_br.qm:
	* ima/italc.qrc:
	* ima/resources/pt_br.ts:
	* ima/resources/pt_br.qm:
	* lib/italc_core.qrc:
	* lib/resources/pt_br.ts:
	* lib/resources/pt_br.qm:
	integrated localization-files for Brazilian Portuguese by
	Thomas Marques <thomasmarques/at/gmx/dot/net>

	* ima/src/side_bar_widget.cpp:
	* ima/src/tool_button.cpp:
	some color-fine-tunings

	* ima/src/client.cpp:
	improved painting of title-bar

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* client.cpp:
	client window if highlighted when selected

	* classroom_manager.cpp:
	* classroom_manager.h:
	client window is zoomed when pressed on manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.cpp:
	arrange order is based on classroom manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/kmultitabbar.cpp:
	support for Qt 4.2
	