@@ -1,3 +1,10 @@
+2008-04-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* setup/src/dialogs.cpp:
+	* setup/src/dialogs.h:
+	fixed confirmation-dialog when closing setup-window via Alt+F4 or
+	close-button (closes #1912695)
+
 2008-04-02	Andrei Krueger	<anc/at/iki/dot/fi>
 
 	* ima/src/classroom_manager.h:
